fix(Modal): increase width to 70% of viewport on tablets (#322)
* fix(Modal): increase width to 60% of viewport on tablets

* Update Modal.module.scss

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -76,10 +76,14 @@
     outline: none;
     border-radius: var(--modal-border-radius);
     box-shadow: var(--size-box-shadow-sm);
-    width: 50vw;
+    width: 70vw;
     min-height: unset;
     max-height: calc(100vh - 80px);
     animation: zoomIn 0.2s ease-out;
+  }
+
+  @media(min-width: $size-breakpoint-desktop) {
+    width: 50vw;
   }
 }
 
